[package]
name = "adam_fov_rs"
description = "A rust implementation of Adam Milazzo's FOV algorithm http://www.adammil.net/blog/v125_Roguelike_Vision_Algorithms.html#mine"
version = "0.2.3"
edition = "2021"
authors = ["sark", "Adam Milazzo"]
homepage = "https://github.com/sarkahn/adam_fov_rs"
repository = "https://github.com/sarkahn/adam_fov_rs"
license = "MIT"
readme = "README.md"
keywords = ["fov", "field-of-view", "roguelike", "2d"]

[dependencies]
glam = { version = "0.27" }
sark_grids = {git = "https://github.com/materialcontext/sark_grids_rs.git", version="0.5.9"}

[dev-dependencies]
bevy = "0.14.1"
bevy_ascii_terminal = {git ="https://github.com/materialcontext/bevy_ascii_terminal", version= "0.15"}
rand = "0.8.4"
