[package]
name = "roguelike_fov"
description = "A rust implementation of Adam Milazzo's FOV algorithm for roguelikes"
version = "0.2.4"
edition = "2021"
authors = ["Ztry8 (AslanD)", "sark", "Adam Milazzo"]
license = "BSD 3-Clause"
readme = "README.md"
keywords = ["fov", "field-of-view", "roguelike", "2d"]

[dependencies]
glam = { version = "0.27" }
sark_grids = {git = "https://github.com/materialcontext/sark_grids_rs.git", version="0.5.9"}

[dev-dependencies]
bevy = "0.14.1"
bevy_ascii_terminal = {git ="https://github.com/materialcontext/bevy_ascii_terminal", version= "0.15"}
rand = "0.8.4"
